pac/net/tye/aks/templates/memealyzernetapi.yaml
# Issue: This file is needed because Tye doesn't support targetPort and that is needed
# https://github.com/dotnet/tye/issues/724

kind: Service
apiVersion: v1
metadata:
  name: memealyzernetapi
  labels:
    app.kubernetes.io/name: 'memealyzernetapi'
    app.kubernetes.io/part-of: 'memealyzer'
spec:
  selector:
    app.kubernetes.io/name: memealyzernetapi
  type: ClusterIP
  ports:
  - name: tcp
    protocol: TCP
    port: 2080
    targetPort: 80
