pac/net/tye/aks/templates/memealyzernetwebapp.yaml
# Issue: This file is needed because Tye doesn't support targetPort and that is needed
# https://github.com/dotnet/tye/issues/724

kind: Service
apiVersion: v1
metadata:
  name: memealyzernetwebapp
  labels:
    app.kubernetes.io/name: 'memealyzernetwebapp'
    app.kubernetes.io/part-of: 'memealyzer'
spec:
  selector:
    app.kubernetes.io/name: memealyzernetwebapp
  type: ClusterIP
  ports:
  - name: tcp
    protocol: TCP
    port: 1080
    targetPort: 80
